Put the first draft

--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="KAIST IS-521 course">
+    <meta name="author" content="Sang Kil Cha">
+    <link rel="icon" href="favicon.ico">
+
+    <title>KAIST IS-521</title>
+
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/is521.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <!-- Begin page content -->
+    <div class="container">
+      <div class="page-header">
+        <h1>Information Security Laboratory</h1>
+      </div>
+      <p class="lead">
+      Information Security Laboratory (IS-521) is a postgraduate hands-on course
+      offered at GSIS (Graduate School of Information Security),
+      <a href="http://www.kaist.ac.kr/html/en/">KAIST</a>, Korea.
+      </p>
+      <p>The primary goal of this course is to "learn by doing". Every student
+      in this course will work on a series of hands-on exercises using Git and
+      GitHub as their primary tools.
+      </p>
+      <p>
+      This course started in spring 2017 by prof. <a
+         href="http://softsec.kaist.ac.kr/~sangkilc/">Sang Kil Cha</a>.
+      </p>
+
+    </div>
+
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">IS-521: Information Security Laboratory @ KAIST</p>
+      </div>
+    </footer>
+
+  </body>
+</html>
