--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="KAIST IS-521 course">
     <meta name="author" content="Sang Kil Cha">
-    <link rel="icon" href="favicon.ico">
+    <link rel="shortcut icon" type='image/x-icon' href="./favicon.ico" />
 
     <title>KAIST IS-521</title>
 
