--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       </p>
       <p>
       <ul>
+          <li><b>2018</b>:
+              [<a href="https://github.com/KAIST-IS521/2018-Spring">Git</a>]
+              [<a href="http://softsec.kaist.ac.kr/courses/2018s-is521/">Web</a>]
+              [<a href="#">CTF</a>]
+          </li>
           <li><b>2017</b>:
               [<a href="https://github.com/KAIST-IS521/2017-Spring">Git</a>]
               [<a href="http://softsec.kaist.ac.kr/courses/2017s-is521/">Web</a>]
